summary/latest: Fix rendering of comments
Because there was a nowrap, everything just kept going on and on
forever, which looks bad on screen, but looks extra bad when your PDF
renderer zooms out to allow the full page to fit on the page. Grrrr!

Remove the nobreak, and also use an actual table to emulate a table - it
works better, and is probably much better supported.

--- a/application/views/themes/default/css/default/reports.css
+++ b/application/views/themes/default/css/default/reports.css
@@ -198,15 +198,13 @@ table#multiple_hosts tr.even td.data {
 	white-space: nowrap;
 }
 
-.data_red
-{
+.data_red {
 	text-align: right;
 	white-space: nowrap;
 	background: url(../../reports/images/redbgimg.png) #FFE8E8 repeat-x;
 }
 
-.data_green
-{
+.data_green {
 	text-align: right;
 	white-space: nowrap;
 	background: url(../../reports/images/greenbgimg.png) #e3f8dc repeat-x;
@@ -491,14 +489,16 @@ td.period_select select {
 	margin-bottom: 5px;
 }
 
-.regular-output {
-	display: table-cell;
-	width: 100%;
-	vertical-align: middle;
+.output,
+.output tr,
+.output td {
+	white-space: normal;
+	border: 0 !important;
+	margin: 0;
+	padding: 0;
 }
 
 .comments {
-	display: table-cell;
 	text-align: right;
 }
 .comments .author {
